<resources>
    <string name="app_name">module_home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">FragmentHome</string>

    <string name="filter_title_server">沃商城服务</string>
    <string name="filter_title_right_location">配送</string>
    <string name="filter_title_all_kinds">全部分类(单选)</string>
    <string name="filter_title_all_kinds_">全部</string>
    <string name="filter_title_range">价格区间</string>
    <string name="filter_price_left">最低价</string>
    <string name="filter_price_right">最高价</string>
    <string name="filter_area_to">配送至</string>

    <string name="home_scan_lable">扫一扫</string>
    <string name="home_message_lable">消息</string>
    <string name="home_title_value_recommend">为您推荐</string>
    <string name="home_title_right_label_exchange">换一批</string>
    <string name="home_title_value_brands">热门品牌</string>
    <string name="home_title_value_newest_product">最新商品</string>
    <string name="home_title_value_you_like">猜你喜欢</string>

    <string name="home_search_lable">搜索</string>
    <string name="home_search_hot">热门搜索</string>
    <string name="home_search_history">搜索历史</string>
    <string name="home_search_no_history">暂无搜索记录</string>
    <string name="home_search_clear_history">清空历史记录</string>
    <string name="home_search_input_hint">请输入关键词</string>

    <string name="home_search_result_empty">暂无搜索结果</string>
    <string name="home_search_del">删除</string>
</resources>
